--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ pagespeed.CriticalImages.Run('/mod_pagespeed_beacon','https://preview.colorlib.c
 <div class="media-body">
 <div class="personal_text">
 <h6>Hello Everybody, i am</h6>
-<h3>Donald McKinney</h3>
-<h4>Junior UI/UX Developer</h4>
-<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
+<h3>Manoj Mahata</h3>
+<h4>Website Developer | Fullstack Developer</h4>
+<p>I am Working as a Full Stack Developer With Front End And Back End Part,I have Experience & Knowledge To Working On Core Php,Codeigniter,Laravel Project,I Have Also Skills in Html.Css,JavaScript,Jquery,Ajax,Sql.I Have Also Experience in Domain & Hosting.</p>
 <ul class="list basic_info">
 <li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
 <li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
