--- a/index.html
+++ b/index.html
@@ -392,22 +392,22 @@
                                         <p>If you are looking For any Blog or News Website For Your Buisnesses or Bloging or Starting a local News Portal for Your Hobbies or Interest.</p>
                                 </div>
                         </div>
-                       <!--  <div class="col-lg-4 col-md-6">
+                        <div class="col-lg-4 col-md-6">
                                 <div class="feature_item">
-                                        <i class="flaticon-skyline"></i> 
-                                          <img src="images/regform.png" width="280" height="200">
-                                        <h4>Personal Blog Site</h4>
-                                        <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
+                                        <!-- <i class="flaticon-skyline"></i>  -->
+                                          <img src="images/ecommerce site.png" width="280" height="200">
+                                        <h4>Ecommerce Website</h4>
+                                        <p>If you are looking For any Ecommerce Website for Sell your Buisness Product,Factory Product or Shop Product In Online Market</p>
                                 </div>
                         </div>
                          <div class="col-lg-4 col-md-6">
                                 <div class="feature_item">
-                                         <i class="flaticon-skyline"></i> 
-                                          <img src="images/regform.png" width="280" height="200">
-                                        <h4>Ecommerce & Buisness Site</h4>
-                                        <p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price. You may see some for as low as $17 each.</p>
+                                         <!-- <i class="flaticon-skyline"></i>  -->
+                                          <img src="images/blog_site.png" width="280" height="200">
+                                        <h4>Buisness Website</h4>
+                                        <p>If you are looking for Grow Your Buisness or Make Your Buisness Online All Over World And Make Your Online Inventory.</p>
                                 </div>
-                        </div> -->
+                        </div>
                          <div class="col-lg-4 col-md-6">
                                 <div class="feature_item">
                                         <!-- <i class="flaticon-skyline"></i> -->
@@ -443,10 +443,10 @@
                         <div class="h_gallery_item">
                                 <div class="g_img_item">
                                 <img class="img-fluid" src="images/ragp_site.png" alt="" data-pagespeed-url-hash="3736219290" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                                <a class="light" href="ragp.sanmarg.in"><img src="img/gallery/xicon.png.pagespeed.ic.zKwfM-RL_y.webp" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></a>
+                               <!--  <a class="light" href="ragp.sanmarg.in"><img src="img/gallery/xicon.png.pagespeed.ic.zKwfM-RL_y.webp" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></a> -->
                                 </div>
                                 <div class="g_item_text">
-                                <h4>Registration Form For Ragp Event For Sanmarg Pvt Ltd</h4>
+                                <h4><a href="https://ragp.sanmarg.in/">Registration Form For Ragp Event For Sanmarg Pvt Ltd</a></h4>
                                 <p>Office Project</p>
                                 </div>
                         </div>
@@ -455,10 +455,10 @@
                         <div class="h_gallery_item">
                                 <div class="g_img_item">
                                 <img class="img-fluid" src="images/aparajite_site.png" alt="" data-pagespeed-url-hash="4030719211" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                                <a class="light" href="aparajita.sanmarg.in"><img src="img/gallery/xicon.png.pagespeed.ic.zKwfM-RL_y.webp" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></a>
+                               <!--  <a class="light" href="aparajita.sanmarg.in"><img src="img/gallery/xicon.png.pagespeed.ic.zKwfM-RL_y.webp" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></a> -->
                                 </div>
                                 <div class="g_item_text">
-                                <h4>Registration Form For Aparajite Event For Sanmarg Pvt Ltd</h4>
+                                <h4><a href="https://aparajita.sanmarg.in/usersignup">Registration Form For Aparajite Event For Sanmarg Pvt Ltd</a></h4>
                                 <p>Office Project</p>
                                 </div>
                         </div>
@@ -499,14 +499,55 @@
                                 </div>
                         </div>
                 </div>
+                 <div class="col-lg-4 col-md-4 col-sm-6  creative">
+                        <div class="h_gallery_item">
+                                <div class="g_img_item">
+                                <img class="img-fluid" src="images/tip_cal.png" alt="" data-pagespeed-url-hash="913751599" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                               <!--  <a class="light" href="img/gallery/project-6.jpg"><img src="img/gallery/xicon.png.pagespeed.ic.zKwfM-RL_y.webp" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></a> -->
+                                </div>
+                                <div class="g_item_text">
+                                <h4><a href="https://manojmahata199.github.io/tip_calculator.github.io/">Tip Calculator</a></h4>
+                                <p>Personal Project</p>
+                                </div>
+                        </div>
+                </div>
                 <div class="col-lg-4 col-md-4 col-sm-6  creative">
                         <div class="h_gallery_item">
                                 <div class="g_img_item">
                                 <img class="img-fluid" src="images/portfolio_site.png" alt="" data-pagespeed-url-hash="913751599" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                                <a class="light" href="img/gallery/project-6.jpg"><img src="img/gallery/xicon.png.pagespeed.ic.zKwfM-RL_y.webp" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></a>
+                                <!-- <a class="light" href="img/gallery/project-6.jpg"><img src="img/gallery/xicon.png.pagespeed.ic.zKwfM-RL_y.webp" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></a> -->
                                 </div>
                                 <div class="g_item_text">
-                                <h4>Personal Portfolio</h4>
+                                <h4><a href="https://manojmahata199.github.io/portfolio/">Personal Portfolio</a></h4>
+                                <p>Personal Project</p>
+                                </div>
+                        </div>
+                </div>
+                
+                 <div class="col-lg-4 col-md-4 col-sm-6  creative">
+                        <div class="h_gallery_item">
+                                <div class="g_img_item">
+
+                                    <img class="img-fluid" src="images/ecommerce site.png" alt="" data-pagespeed-url-hash="913751599" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                               <!--  <a class="light" href="https://manojmahata199.github.io/Ecommerceproduct.github.io/"><img src="" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                </a> -->
+                                </div>
+                                <div class="g_item_text">
+                                <h4> <a href="https://manojmahata199.github.io/Ecommerceproduct.github.io/">ECommerce Product Page</a></h4>
+                                <p>Personal Project</p>
+                                </div>
+                        </div>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6  creative">
+                        <div class="h_gallery_item">
+                                <div class="g_img_item">
+
+                                    <img class="img-fluid" src="images/blog_site.png" alt="" data-pagespeed-url-hash="913751599" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                               <!--  <a class="light" href="https://manojmahata199.github.io/Ecommerceproduct.github.io/"><img src="" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                </a> -->
+                                </div>
+                                <div class="g_item_text">
+                                <h4> <a href="https://manojmahata199.github.io/codingacademy/">News & Blog Website</a></h4>
                                 <p>Personal Project</p>
                                 </div>
                         </div>
