--- a/index.html
+++ b/index.html
@@ -128,20 +128,20 @@
                                                 <div class="wel_item">
                                                 <i class="fa fa-file"></i>
                                                 <h4>2</h4>
-                                                <p>Total Project</p>
+                                                <p>Office Live Project</p>
                                                 </div>
                                                 </div>
                                                 <div class="col-md-4">
                                                 <div class="wel_item">
                                                 <i class="fa-solid fa-building"></i>
                                                 <h4>4</h4>
-                                                <p>Internal Project</p>
+                                                <p>Internal Office Project</p>
                                                 </div>
                                                 </div>
                                                 <div class="col-md-4">
                                                 <div class="wel_item">
                                                 <i class="fa fa-book"></i>
-                                                <h4>2</h4>
+                                                <h4>4</h4>
                                                 <p>Educational Project</p>
                                                 </div>
                                                 </div>
