--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="icon" href="img/xfavicon.png.pagespeed.ic._A_I99HEDS.webp" type="image/png">
 <title>My Portfolio</title>
+ <link rel = "icon" href ="images/logofacebook.png" type = "image/x-icon">
 
 <link rel="stylesheet" href="css/style.css" />
 
@@ -470,7 +471,7 @@
                                 <a class="light" href="img/gallery/project-3.jpg"><img src="img/gallery/xicon.png.pagespeed.ic.zKwfM-RL_y.webp" alt="" data-pagespeed-url-hash="12479754" onload="pagespeed.CriticalImages.checkImageForCriticality(this);"></a>
                                 </div>
                                 <div class="g_item_text">
-                                <h4>Employee Management System For Sanmarg Pvt Ltd</h4>
+                                <h4><a href="https://manojmahata199.github.io/employee_management/">Employee Management System For Sanmarg Pvt Ltd</a></h4>
                                 <p>Office Project</p>
                                 </div>
                         </div>
